<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="new_relic_api_key">AA38fab9434facded12cee21c6f8bcb57c556d384c</string>
    <string name="app_name">Spotio</string>
    <string name="title_section_home">Home</string>
    <string name="title_section_satellite">Satellite View</string>
    <string name="title_section_user">Add User</string>
    <string name="title_section_status">Customize Status</string>
    <string name="title_section_questions">Customize Questions</string>
    <string name="title_section_delete">Delete Pin</string>
    <string name="title_section_reports">Reports</string>
    <string name="title_section_support">Support</string>
    <string name="title_section_logout">Log Out</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="action_refresh">Refresh..</string>
    <string name="gotowebsite_link">Login to SPOTIO.com</string>
    <string name="needmorehelp_text">Need more help? Visit our Support Forum, just click \"Support\" from the drawer menu.</string>
    <string name="title_activity_details">Details</string>
    <string name="hello_world">Hello world!</string>
    <string name="share">Share</string>
    <string name="edit_item">Edit</string>
    <string name="edit_accept">Accept</string>
    <string name="title_activity_almost_done">Almost Done</string>
    <string name="title_activity_add">New</string>
    <string name="title_activity_edit">Edit</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_save">Save</string>
    <string name="action_filter">Filter</string>
    <string name="title_activity_filter">Filter</string>
    <string name="forgot_pass"><u>Forgot password?</u></string>
    <string name="date_acs">Date ▲</string>
    <string name="view_map">View Map</string>
    <string name="almost_done_skip">Skip</string>
    <string name="tutorial">Quick Tutorial</string>
    <string name="action_finish">Skip</string>
    <string name="no_google_services">This app can\'t work without google services</string>
    <string name="ok">OK</string>
    <string name="error_no_internet_connection">Error ! Check your internet connection</string>
    <string name="title_section_refresh">Refresh</string>
    <string name="btn_done">Done</string>
    <string name="toast_event_successfully_added">Event was successfully added</string>
    <string name="processing_pins">Processing pins…</string>
    <string name="loading">Loading…</string>
    <string name="question_how_many_employees">How many employees would you be using?</string>
    <string name="question_what_describes_your_role">What best describes your role?</string>
    <string name="what_industry_describes_you">What industry best describes you?</string>
    <string name="get_started">Get Started</string>
    <string name="login">Login</string>
    <string name="next">Next</string>
    <string name="all_fields_required">All fields required</string>
    <string name="spotio">Spotio</string>
    <string name="error_industry_is_not_chosen">Choose industry</string>
    <string name="question_what_industry_best_describes_you">What industry best describes you?</string>
    <string name="letsgo">Let\'s Go!</string>

</resources>
