<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:background="@drawable/background"
        tools:context="com.icanvass.activities.AlmostDoneActivity">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/what_industry_describes_you"
            android:id="@+id/tvAddress"
            android:layout_alignParentTop="true"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@android:color/white" />

        <Spinner
            android:id="@+id/industry_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvAddress"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            style="@style/LightSpinner"
            android:layout_marginBottom="20dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/question_what_describes_your_role"
            android:id="@+id/tvCity"
            android:layout_below="@+id/industry_spinner"
            android:textColor="@android:color/white" />

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/role_spinner"
            android:layout_below="@+id/tvCity"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            style="@style/LightSpinner"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/question_how_many_employees"
            android:id="@+id/tvDateTime"
            android:layout_below="@+id/role_spinner"
            android:textColor="@android:color/white" />

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/employees_spinner"
            android:layout_below="@+id/tvDateTime"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            style="@style/LightSpinner"
            />

        <Button
            android:layout_width="293dp"
            android:layout_height="48dp"
            android:id="@+id/get_started_button"
            android:layout_below="@+id/employees_spinner"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:text="@string/get_started"
            style="@style/OrangeButton"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/almost_done_skip"
            android:id="@+id/skip_button"
            android:layout_below="@+id/get_started_button"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:background="@null"
            android:textColor="@android:color/white" />

    </RelativeLayout>
</ScrollView>
